Improved installation and translations. Added missing options such as Translated (bool).

--- a/packages/component/administrator/components/com_portals/language/en-GB/en-GB.com_portals.ini
+++ b/packages/component/administrator/components/com_portals/language/en-GB/en-GB.com_portals.ini
@@ -1,2 +1,8 @@
 ORDER="Order"
-PORTALS_NO_ITEMS="No items"
+NO_ITEMS="No items"
+CONTENT="Content"
+FEILDS="Fields"
+SLUG="Slug"
+TRANSLATIONS="Translations"
+OWNER="Owner"
+TRANSLATED="Translated"
